review fixes
Signed-off-by: Riad Benradi <riad.benradi_externe@rte-france.com>